# ai-music-gen

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  API_USAGE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  MANUAL_DEPLOYMENT.md  Makefile  README.md  SPEC.md  TESTING.md  ai-music-gen.code-workspace  docker-compose.yml  package-lock.json  package.json  release-please-config.json
backend/: .gitignore  Dockerfile  modal_app.py  pyproject.toml  requirements.txt  test_modal.py
backend/app/: main.py
backend/app/core/: config.py  limiter.py
backend/app/services/: acestep_client.py  job_queue.py  lyrics_generator.py  modal_client.py  storage.py
backend/examples/text2music/: example_01.json  example_02.json  example_03.json  example_04.json  example_05.json  example_06.json  example_07.json  example_08.json  example_09.json  example_10.json  example_101.json  example_102.json  example_103.json  example_104.json  example_105.json  example_106.json  example_107.json  example_108.json  example_109.json  example_11.json  example_110.json  example_111.json  example_112.json  example_113.json  example_115.json  example_116.json  example_117.json  example_118.json  example_119.json  example_12.json  example_120.json  example_121.json  example_122.json  example_123.json  example_124.json  example_125.json  example_126.json  example_127.json  example_128.json  example_129.json  (+142 more)
backend/tests/: README.md  conftest.py  test_api.py
backend/tests/deployment/: .env.test.example  conftest.py  run_tests.sh
(+54 files in other folders)
